--- a/first-project/style.css
+++ b/first-project/style.css
@@ -31,6 +31,11 @@ nav {
     font-size: 18px;
 }
 
+.nav-bar-list a:hover {
+    color: #FFFFFFFF;
+    transition: 0.4s;
+}
+
 .logo-type {
     font-weight: bold;
     color: #e3defd;
